log

ju., 10 de mar. de 2022 22:17:00: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
284a8e0
ju., 10 de mar. de 2022 22:59:31: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b82571f
vi., 11 de mar. de 2022 10:44:43: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
368995d
vi., 11 de mar. de 2022 11:11:50: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
d1d2e94
vi., 11 de mar. de 2022 11:19:29: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e3e7ec
